# learn-vulkan-book-code

./: .gitignore  CMakeLists.txt  README.md  config.json
Assets/: 关于0xC0000374报错.md  多线程传参.md
Basic_chapter_02_psedocode/: Vukan编程模型-伪代码.md
Basic_chapter_03_HandShake/: CMakeLists.txt
Basic_chapter_04_DebugVulkan/: CMakeLists.txt  说明.md
Basic_chapter_05_CommandBuffer/: CMakeLists.txt
Basic_chapter_06_SwapChain/: CMakeLists.txt  校验层日志.txt  说明.md
Basic_chapter_07a_VertexBuffer/: CMakeLists.txt  校验层日志.txt
Basic_chapter_07a_VertexBuffer/include/: Headers.h  VulkanApplication.h  VulkanRenderer.h
Basic_chapter_07a_VertexBuffer/source/: VulkanApplication.cpp  VulkanRenderer.cpp  VulkanSwapChain.cpp
Basic_chapter_07b_RenderPass/: CMakeLists.txt
Basic_chapter_07c_FrameBuffer/: CMakeLists.txt
Basic_chapter_07d_ClearingBackground/: CMakeLists.txt
Basic_chapter_07e_ShadersWithSPIRV/: CMakeLists.txt  校验层日志.txt  说明.md
Basic_chapter_08_PipelineStateMgmt/: CMakeLists.txt  校验层日志.txt
Basic_chapter_09a_DrawingHelloWorld/: CMakeLists.txt  校验层日志.txt
Basic_chapter_09b_IndexedDraw/: CMakeLists.txt  校验层日志.txt
Basic_chapter_09c_Resizing/: CMakeLists.txt  Resize.vert  校验层日志.txt
Basic_chapter_10a_Uniforms_And_Descriptors/: CMakeLists.txt  Descriptor.frag  Descriptor.vert  校验层日志.txt
Basic_chapter_10b_PushConstant/: CMakeLists.txt  CompileShader.bat  PushConstant-frag.spv  PushConstant-vert.spv  PushConstant.frag  PushConstant.vert  校验层日志.txt
Basic_chapter_10b_PushConstant/include/: Headers.h  VulkanDescriptor.h  VulkanPipeline.h  VulkanRenderer.h  VulkanShader.h  VulkanSwapChain.h
Basic_chapter_10b_PushConstant/source/: VulkanApplication.cpp  VulkanDescriptor.cpp  VulkanDrawable.cpp  VulkanRenderer.cpp  VulkanShader.cpp  VulkanSwapChain.cpp  main.cpp
Basic_chapter_11a_Texture_LinearLayout/: CMakeLists.txt  校验层日志.txt
Basic_chapter_11b_Texture_OptimalLayout/: CMakeLists.txt  Texture.vert  校验层日志.txt  说明.md  错误日志.txt
Chapter01-01/: CMakeLists.txt  config.json
Chapter02-01/: CMakeLists.txt  说明.md
Chapter02-02/: CMakeLists.txt  说明.md
Chapter03/: 注意.md
Chapter04-01/: CMakeLists.txt
Chapter04-02/: CMakeLists.txt  说明.md
Chapter04-03/: CMakeLists.txt  说明.md
Chapter04-04/: CMakeLists.txt
Chapter04-05/: CMakeLists.txt
Chapter04-06/: CMakeLists.txt
Chapter04-07/: CMakeLists.txt
Chapter04-08/: CMakeLists.txt
Chapter04-09/: CMakeLists.txt
Chapter04-10/: CMakeLists.txt
Chapter04-11/: CMakeLists.txt
Chapter04-12/: CMakeLists.txt
Chapter04-13/: CMakeLists.txt
Chapter04-14/: CMakeLists.txt
Chapter04-15/: CMakeLists.txt
Chapter04-16/: CMakeLists.txt
Chapter05-01/: CMakeLists.txt
Chapter05-02/: CMakeLists.txt
Chapter05-03/: CMakeLists.txt
Chapter05-04/: CMakeLists.txt
Chapter05-05/: CMakeLists.txt
Chapter05-06/: CMakeLists.txt
Chapter05-07/: CMakeLists.txt
Chapter05-08/: CMakeLists.txt
Chapter05-09/: CMakeLists.txt
Chapter05-10/: CMakeLists.txt
Chapter06-01/: CMakeLists.txt  说明.md
Chapter06-02/: CMakeLists.txt
Chapter06-03/: CMakeLists.txt
Chapter06-04/: CMakeLists.txt
Chapter06-05/: CMakeLists.txt
Chapter06-06/: CMakeLists.txt
Chapter06-07/: CMakeLists.txt
Chapter06-08/: CMakeLists.txt
Chapter06-09/: CMakeLists.txt  说明.md
Chapter06-10/: CMakeLists.txt  说明.md
Chapter06-11/: CMakeLists.txt
Chapter07-01/: CMakeLists.txt
Chapter07-02/: CMakeLists.txt
Chapter07-03/: CMakeLists.txt
Chapter07-04/: CMakeLists.txt
Chapter07-05/: CMakeLists.txt
Chapter07-06/: CMakeLists.txt
Chapter08-01/: CMakeLists.txt
Chapter08-01A/: CMakeLists.txt
Chapter08-02/: CMakeLists.txt  说明.md
Chapter08-03/: CMakeLists.txt
Chapter08-04/: CMakeLists.txt
Chapter09-01/: CMakeLists.txt
Chapter09-02/: CMakeLists.txt
Chapter09-03/: CMakeLists.txt
Chapter09-04/: CMakeLists.txt
Chapter09-04A/: CMakeLists.txt
Chapter09-05/: CMakeLists.txt
Chapter09-06/: CMakeLists.txt
Chapter09-07/: CMakeLists.txt
Chapter09-08/: CMakeLists.txt
Chapter09-09/: CMakeLists.txt
Chapter09-10/: CMakeLists.txt
Chapter09-11/: CMakeLists.txt
Chapter09-12/: CMakeLists.txt
Chapter09-13/: CMakeLists.txt
Chapter09-14/: CMakeLists.txt
Chapter10-01/: CMakeLists.txt
Chapter10-02/: CMakeLists.txt
Chapter10-03/: CMakeLists.txt
Chapter10-04/: CMakeLists.txt
Chapter11-01/: CMakeLists.txt
Chapter11-02/: CMakeLists.txt
Chapter11-03/: CMakeLists.txt
Chapter11-04/: CMakeLists.txt
Chapter11-05/: CMakeLists.txt
Chapter11-06/: CMakeLists.txt
Chapter11-07/: CMakeLists.txt
Chapter12-01/: CMakeLists.txt
Chapter12-02/: CMakeLists.txt
Chapter12-03/: CMakeLists.txt
Chapter12-04/: CMakeLists.txt
Chapter12-05/: CMakeLists.txt
Chapter12-05A/: CMakeLists.txt
Chapter12-06/: CMakeLists.txt
Chapter12-07/: CMakeLists.txt
Chapter12-08/: CMakeLists.txt
Chapter12-09/: CMakeLists.txt
Chapter12-10/: CMakeLists.txt
Chapter12-11/: CMakeLists.txt
Chapter12-12/: CMakeLists.txt
Chapter12-13/: CMakeLists.txt
Chapter12-14/: CMakeLists.txt
Chapter12-14/shaders/: commonParticle.frag  commonParticle.vert
Chapter12-14/src/: CameraUtil.cpp  CameraUtil.h  FileUtil.cpp  FlatData.h  HelpFunction.h  LoadUtil.h  ObjObject.cpp  ObjObject.h  ParticleDataConstant.h  ParticleForDraw.cpp  ParticleForDraw.h  ParticleSystem.cpp  ParticleSystem.h  ShaderQueueSuit_CommonTexParticle.cpp  ShaderQueueSuit_CommonTexParticle.h  ShaderQueueSuit_CommonTexParticleFour.cpp  ShaderQueueSuit_CommonTexParticleFour.h  ShaderQueueSuit_CommonTexParticleThree.cpp  ShaderQueueSuit_CommonTexParticleThree.h  ShaderQueueSuit_CommonTexParticleTwo.cpp  ShaderQueueSuit_CommonTexParticleTwo.h  TexDataObject.cpp  TextureManager.cpp  VulkanDemoApp.cpp
Chapter12-15/: CMakeLists.txt
Chapter13-01/: CMakeLists.txt
Chapter13-02/: CMakeLists.txt
Chapter13-03/: CMakeLists.txt
Chapter13-04/: CMakeLists.txt
Chapter13-05/: CMakeLists.txt
Chapter13-06/: CMakeLists.txt
Chapter13-07/: CMakeLists.txt
Chapter13-08/: CMakeLists.txt
Chapter13-09/: CMakeLists.txt
Chapter13-10/: CMakeLists.txt
Chapter13-11/: CMakeLists.txt
Chapter14-01/: CMakeLists.txt
(+2174 files in other folders)
